--- a/src/App.css
+++ b/src/App.css
@@ -85,11 +85,12 @@
 /* ドロップボタン */
 .custom-select {
   width: 300px;
-  height: 50px;
+  height: auto;
   font-size: 20px;
   padding: 10px;
   border-radius: 10px;
   border: 1px solid #ccc;
+  overflow-y: auto; /* スクロールバーを表示 */
 }
 
 @media (max-width: 600px) {
