--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,69 @@
-/*位置設定*/
-.container {
+.checkbox-container {
   display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  margin-top: 100px;
+  flex-wrap: wrap;
+  padding: 10px;
+  border: 3px solid #000;
+  border-radius: 10px;
+  margin-top: 20px;
 }
 
-#map-container {
-  flex: 1;
+.checkbox-label {
+  position: relative;
+  margin-right: 20px;
+  margin-bottom: 30px;
+  font-size: 30px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
 }
 
-/*ドロップボタンタイトルの枠 */
-.sidebar {
-  margin-left: 20px;
-  padding: 20px;
-  border: 10px solid #4b3333;
-  background-color: #bdbb95;
+.checkbox-label input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
 }
 
-/* タイトル*/
+.checkmark {
+  position: relative;
+  margin-right: 10px;
+  height: 20px;
+  width: 20px;
+  background-color: #eee;
+  border: 1px solid #ccc;
+}
+
+.checkbox-label:hover .checkmark {
+  background-color: #ccc;
+}
+
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.checkbox-label input:checked ~ .checkmark:after {
+  display: block;
+}
+
+.checkbox-label .checkmark:after {
+  left: 6px;
+  top: 2px;
+  width: 5px;
+  height: 10px;
+  border: solid #2566cc;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+}
+
 .title {
   font-size: 44px;
   margin-bottom: 30px;
-
   display: inline-block;
   border-radius: 20px;
   box-shadow: 2px 2px 5px rgba(236, 150, 21, 0.2);
-
   margin: 0;
   padding: 50px;
   font-size: 3em;
@@ -40,7 +77,6 @@
   animation: bg 30s infinite;
 }
 
-/*タイトルの設定*/
 :root {
   --white: #fff;
   --blue: #1e90ff;
@@ -62,69 +98,5 @@
   }
   75% {
     background-color: var(--pink);
-  }
-}
-
-/* ドロップボタンのタイトル*/
-.subTitle {
-  font-size: 34px;
-  margin-bottom: 30px;
-  color: rgb(22, 3, 3);
-}
-
-.tooltip {
-  position: absolute;
-  background-color: white;
-  border: 1px solid #ccc;
-  padding: 5px;
-  display: none;
-  pointer-events: none;
-  z-index: 100;
-}
-
-/* ドロップボタン */
-.custom-select {
-  width: 300px;
-  height: auto;
-  font-size: 20px;
-  padding: 10px;
-  border-radius: 10px;
-  border: 1px solid #ccc;
-  overflow-y: auto; /* スクロールバーを表示 */
-}
-
-@media (max-width: 600px) {
-  .container {
-    flex-direction: column;
-  }
-
-  #map-container {
-    width: 70%;
-    height: 50vh;
-  }
-
-  .sidebar {
-    width: 70%;
-    height: 50vh;
-  }
-}
-
-@media (min-width: 600px) {
-  .container {
-    display: flex;
-    flex-direction: row;
-  }
-
-  #map-container {
-    width: 70%;
-    height: 100vh;
-  }
-
-  .sidebar {
-    width: 40%;
-    height: 50vh;
-    overflow-y: auto;
-    padding: 10px;
-    box-sizing: border-box;
   }
 }
