--- a/src/App.css
+++ b/src/App.css
@@ -4,14 +4,33 @@
   padding: 10px;
   border: 3px solid #000;
   border-radius: 10px;
-  margin-top: 20px;
+  margin-top: 10px;
+}
+
+.button-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.botton-style {
+  margin: 10px;
+}
+
+.toggle-container {
+  margin: 20px;
+  margin-right: 100px;
+  font-size: 20px;
+}
+
+.toggle-margin {
+  margin: 20px;
 }
 
 .checkbox-label {
   position: relative;
-  margin-right: 20px;
-  margin-bottom: 30px;
-  font-size: 30px;
+  margin: 20px;
+  font-size: 20px;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -59,7 +78,7 @@
 }
 
 .title {
-  font-size: 44px;
+  font-size: 40px;
   margin-bottom: 30px;
   display: inline-block;
   border-radius: 20px;
