--- a/src/App.css
+++ b/src/App.css
@@ -18,8 +18,9 @@
 }
 
 .content-container {
-  padding: 20px;
-  min-height: 300px;
+  padding: 10px;
+  min-height: 400px;
+  margin-right: 400px;
 }
 
 .selection {
@@ -30,7 +31,14 @@
 }
 
 .botton-style {
-  margin: 10px;
+  margin: 18px;
+  font-size: 20px;
+  border: 1px solid #ccc;
+  background-color: #eee;
+}
+
+button:hover {
+  background-color: #ccc;
 }
 
 .toggle-container {
