--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,6 @@
 .content-container {
   padding: 10px;
   min-height: 400px;
-  margin-right: 400px;
 }
 
 .selection {
@@ -148,4 +147,27 @@ button:hover {
   75% {
     background-color: var(--pink);
   }
+}
+
+.app-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 20px;
+}
+
+.right-side-content {
+  background-color: #f5f5f5;
+  padding: 15px;
+  border-radius: 8px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.division {
+  display: flex;
+}
+
+.tokyo-division {
+  min-width: 70%;
+  margin-right: 30px;
 }
